fluxcd/clusters/pi/home/sync-truenas/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: sync-truenas
  namespace: home
spec:
  selector:
    app: sync-truenas
  ports:
    - name: sync-web-ui
      port: 80
      targetPort: sync-web-ui
